test: update test target

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,16 +1,14 @@
 criterion_dep = dependency('criterion', version : '>=2.4.0')
 
-test_src = [
+ustring_test_src = [
     'str_test.c',
-    # 'str_list_test.c',
+    'str_list_test.c',
 ]
 
-test_exe = executable('ustring_test',
-    test_src,
+ustring_test_exe = executable('ustring_test', ustring_test_src,
     include_directories: ustring_inc,
     link_with: ustring_lib,
-    dependencies: [criterion_dep],
+    dependencies: criterion_dep,
 )
 
-test('str', test_exe)
-# test('str_list', test_exe)
+test('ustring_test', ustring_test_exe)
